--- a/client/src/styles/Login.module.css
+++ b/client/src/styles/Login.module.css
@@ -9,7 +9,7 @@
 }
 
 .button {
-    @apply w-full bg-gradient-to-r from-blue-500 to-indigo-500 rounded-md;
+    @apply w-full bg-gradient-to-r from-blue-500 to-indigo-500 rounded-md border;
     @apply py-3 text-gray-50 text-lg
 }
 
