--- a/client/src/styles/Login.module.css
+++ b/client/src/styles/Login.module.css
@@ -10,7 +10,7 @@
 
 .button {
     @apply w-full bg-gradient-to-r from-blue-500 to-indigo-500 rounded-md border;
-    @apply py-3 text-gray-50 text-lg
+    @apply py-3 text-gray-50 text-lg;
 }
 
 .button:hover {
