--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 255, 255, 255;
   --background-rgb: 50, 50, 50;
 }
@@ -17,7 +17,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb))
-}
+} */
 
 body {
   @apply bg-slate-200;
