--- a/client/src/styles/Discounts.module.css
+++ b/client/src/styles/Discounts.module.css
@@ -1,6 +1,6 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
+    grid-template-columns: repeat(4 ,300px);
     justify-content: center;
     gap: 30px;
   }
