--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -23,4 +23,14 @@ body {
   @apply bg-slate-200;
 }
 
+.carousel {
+  -ms-overflow-style: none; /*IE and Edge*/
+  scrollbar-width: none; /*Firefox*/
+}
+
+/*Chrome, Safari and Opera*/
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+
 
